Changed css for a inside code; Removed unwanted css; Changed README and toml files inside theme

--- a/index.html
+++ b/index.html
@@ -274,8 +274,16 @@ h6 {
     
         <div class="col-md-8 col-md-offset-2">
             <h2 id="about">About</h2>
-<p>An example about! 🎉</p>
-<p>This section defines concisely the basic project frame.</p>
+<p>This is an example about! 🎉</p>
+<p>Content about the project can be added here. 😄</p>
+<h2 id="math">Math</h2>
+<p>The theme supports math typesetting through katex.</p>
+<h3 id="examples">Examples</h3>
+<p>Inline math: $ \varphi = \dfrac{1+\sqrt5}{2}= 1.6180339887… $</p>
+<p>Block math:</p>
+<p>$$
+\varphi = 1+\frac{1} {1+\frac{1} {1+\frac{1} {1+\cdots} } }
+$$</p>
 <h2 id="fun">Fun</h2>
 <p>Emoji can be enabled in a Hugo project in a number of ways.</p>
 <p>The <a href="https://gohugo.io/functions/emojify/"><code>emojify</code></a> function can be called directly in templates or <a href="https://gohugo.io/templates/shortcode-templates/#inline-shortcodes">Inline Shortcodes</a>.</p>
@@ -355,6 +363,11 @@ font-family: Apple Color Emoji,Segoe UI Emoji,NotoColorEmoji,Segoe UI Symbol,And
 <nav id="TableOfContents">
   <ul>
     <li><a href="#about">About</a></li>
+    <li><a href="#math">Math</a>
+      <ul>
+        <li><a href="#examples">Examples</a></li>
+      </ul>
+    </li>
     <li><a href="#fun">Fun</a></li>
     <li><a href="#projects">Projects</a>
       <ul>
