Removed hr for footnotes

--- a/index.html
+++ b/index.html
@@ -348,7 +348,8 @@ font-family: Apple Color Emoji,Segoe UI Emoji,NotoColorEmoji,Segoe UI Symbol,And
   <span style="color:#888">&lt;</span><span style="color:#2838b0">p</span><span style="color:#888">&gt;</span>Test<span style="color:#888">&lt;/</span><span style="color:#2838b0">p</span><span style="color:#888">&gt;</span>
 <span style="color:#888">&lt;/</span><span style="color:#2838b0">body</span><span style="color:#888">&gt;</span>
 <span style="color:#888">&lt;/</span><span style="color:#2838b0">html</span><span style="color:#888">&gt;</span>
-</code></pre></div><section class="footnotes" role="doc-endnotes">
+</code></pre></div><h2 id="references">References</h2>
+<section class="footnotes" role="doc-endnotes">
 <hr>
 <ol>
 <li id="fn:1" role="doc-endnote">
@@ -381,6 +382,7 @@ font-family: Apple Color Emoji,Segoe UI Emoji,NotoColorEmoji,Segoe UI Symbol,And
     </li>
     <li><a href="#tables">Tables</a></li>
     <li><a href="#code-block-with-hugos-internal-highlight-shortcode">Code block with Hugo&rsquo;s internal highlight shortcode</a></li>
+    <li><a href="#references">References</a></li>
   </ul>
 </nav>
 
